# tsar-advisor

./: .editorconfig  .gitignore  .vscodeignore  CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  package-lock.json  package.json  snippets.json
addon/: addon.js  binding.gyp
html/: style.css
src/: aliasTree.ts  calleeFunc.ts  extension.ts  fileList.ts  functions.ts  general.ts  log.ts  loopExplorer.ts  loopTree.ts  messages.ts  project.ts  server.ts  tools.ts  transformProvider.ts  webviewProvider.ts
src/tree/: registerTrees.ts
src/tree/projects/: ProjectFileJsonObject.ts  ProjectFileTreeItem.ts  ProjectJsonObject.ts  ProjectTreeDataProvider.ts  ProjectTreeItem.ts
